--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^1.8.2",
     "discord.js": "^12.5.1",
     "prettier": "^2.2.1",
     "sequelize": "^6.3.5",
